<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AntiEpidemicSupport</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="buttonLogin">Login</string>
    <string name="textFind">Retrieve password</string>
    <string name="textNew">New account</string>
    <string name="textPassword">Password</string>
    <string name="textID">ID</string>
    <string name="LoginImage" translatable="false">loginImage</string>
    <string name="textView">This is Post Fragment</string>
    <string name="textShow">This is addPost Fragment</string>
    <string name="LoginFragment">Login</string>
    <string name="PostFragment">Post</string>
    <string name="AddFragment">AddPost</string>
    <string name="textVision" translatable="false">YF@1.0</string>
    <string name="hint" translatable="false">123\n456\n789\n</string>
    <string name="addImage" translatable="false">add</string>
    <string name="imagechoose" translatable="false">image</string>
    <string name="navgation">Navigation mode</string>
    <string name="emergencyShow">Emergency color mode</string>
    <string name="normal">Normal mode</string>
    <string name="searchBar">Search</string>
    <string name="mapItem">Map</string>
    <string name="postItem">Post</string>
    <string name="meItem">Me</string>
    <string name="AddPostHint">Write down your need or feeling</string>
    <string name="map_message">It\'s already in </string>
    <string name="cancel">Cancel</string>
    <string name="addPhoto" translatable="false">add</string>
    <string name="buttonAddPicture">AddPicture</string>
    <string name="quit_action">Are you Sure to quit\?</string>
    <string name="QUIT_PISOTIVE">YES</string>
    <string name="QUIT_NRGATIVE">NO</string>
    <string name="textName">Name</string>
    <string name="textnumber">Number</string>
    <string name="buttonre">Register</string>
    <string name="NoNewCount">PhoneNumber or Password doesn\'t conform to specification</string>
    <string name="NewCount">Registered Successfully</string>
    <string name="wrong">Wrong account or password</string>
    <string name="pass">Enter a 6-16 digit password</string>
    <string name="name" translatable="false">名字</string>
    <string name="ID" translatable="false">账号</string>
    <string name="addr" translatable="false">地址</string>
    <string name="edit" translatable="false">编辑信息</string>
    <string name="choose" translatable="false">从相册选择</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="Identity" translatable="false">身份</string>
    <string name="Inst" translatable="false">中转点</string>
    <string name="OK" translatable="false">确认</string>
    <string name="account_track" translatable="false">关注用户</string>
    <string name="post_track" translatable="false">关注帖子</string>
    <string name="record" translatable="false">交易记录</string>
    <string name="logistics" translatable="false">物流信息</string>
    <string name="giveItem">Give</string>
    <string name="receiveItem">Receive</string>
    <string name="done">Done</string>
    <string name="getSMS">Get captcha</string>
    <string name="sms">Captcha</string>
    <string name="prepare">Preparing in the map...</string>
    <string name="INITVALUE" translatable="false">20</string>
</resources>
