<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/searchBar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_normal"
        android:enabled="true"
        android:title="@string/normal"
        android:visible="true" />
    <item
        android:id="@+id/item_navigation"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/navgation"
        android:visible="true" />
    <item
        android:id="@+id/item_emergency"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/emergencyShow"
        android:visible="true" />
</menu>