<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MeFragment" >

    <!--个人信息-->
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:context=".personal_fr">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/ic_me"
            tools:ignore="ExtraText,NestedWeights"
            android:contentDescription="@string/todo"
            android:layout_marginStart="20dp" />

        <LinearLayout
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/name"
                android:layout_width="610dp"
                android:layout_height="wrap_content"
                android:background="#FAF9F9"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#04010C"
                android:textSize="36sp" />

            <TextView
                android:layout_width="591dp"
                android:layout_height="42dp"
                android:text="@string/ID"
                android:textColor="#1E1C1C"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="6dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_weight="2"
            android:background="#69F0AE"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginEnd="30dp" />
    </LinearLayout>
    <!--关注用户，帖子-->
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/account"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="#69F0AE"
            android:text="@string/account_track"
            tools:ignore="ButtonStyle,NestedWeights"
            android:layout_marginStart="20dp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/post"
            android:layout_width="0dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#69F0AE"
            android:text="@string/post_track"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record"
            tools:ignore="NestedWeights" />
        <ListView
            android:id="@+id/it1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp">
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/logistics"
            />
        <ListView
            android:id="@+id/it2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp">
        </ListView>

    </LinearLayout>



</LinearLayout>